// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Title > renders snapshot 1`] = `
<div>
  <h3
    class="
        title-component
        xxl
        title-component
        ellipsis
        a11y-length
      "
  >
    Example title
  </h3>
</div>
`;

exports[`Title > renders with the correct tag name 1`] = `
<div>
  <h3
    class="
        title-component
        xxl
        title-component
        ellipsis
        a11y-length
      "
  >
    Example title
  </h3>
</div>
`;

exports[`Title > renders with the correct tag name when level is 0 1`] = `
<div>
  <p
    class="
        title-component
        xxl
        title-component
        ellipsis
        a11y-length
      "
  >
    Example title
  </p>
</div>
`;

exports[`Title > renders with the correct tag name when level is out range 1`] = `
<div>
  <h2
    class="
        title-component
        xxl
        title-component
        ellipsis
        a11y-length
      "
  >
    Example title
  </h2>
</div>
`;
